scss/style.scss
.navbar {
  position: fixed;
  z-index: 10;
  top: 0;
  left: 0;
  width: 100%;
  padding: 1.3em 0;
  margin: 0;
  border: 0;
  border-radius: 0;
  background-color: #282828;
  min-height: 50px;
}

// .active {
//     color:#F38A8A;
//     border-bottom:3px solid #F38A8A;
//   }

.navbar-nav {
  font-family: 'Montserrat', sans-serif;
  font-size: 0.8em;
  letter-spacing: 0.1em;
  text-transform: uppercase;
  padding-top: 0.7em;
  margin: 0;
}

.london {
  background: url('london.jpg');
  background-size: cover;
  height: calc(100vh);
}

.opener {
    display: table-cell;
    vertical-align: middle;
    color: #fff;
    padding: 10em 0 7em;
    width: 100000px;
    height: 100vh;
}

.rel-1 {
    position: relative;
    z-index: 1;
}

h1 {
  font-family: 'Montserrat', sans-serif;
  font-weight: 700;
  font-size: 4.5em;
  line-height: 1.2;
  margin: 0 0 0.3em;
  position: absolute;
  width: 500px;
  height: 113%;
}

.test {
  position: relative;
  width: 300px;
  height: 200px;
  margin-right: 72%;
  margin-top: -1%;
}

.block {
  background: #000;
  filter: alpha(opacity=60);
  -moz-opacity: 0.6;
  opacity: 0.3;
  position: absolute;
  top: 0px;
  left: 0px;
  height: 94%;
  width: 150%;
}

.developer {
  font-family: 'Roboto, sans-serif';
  font-weight: 700;
  font-size: 22px;
  line-height: 1.25em;
  margin-top: 58%;
  letter-spacing: 2px;
  text-transform: uppercase;
  color: white;
}

.contactMe:hover {
  background-color: #FFFFFF;
  color: #970a1b;
}

.btn {
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  font-size: 0.85em;
  letter-spacing: 0.1em;
  line-height: 1;
  position: relative;
  display: inline-block;
  background: #970a1b;
  border: 2px solid #970a1b;
  padding: 1.4em 3.5em 1.4em;
  border-radius: 0;
  text-decoration: none;
  color: #fff;
  text-transform: uppercase;
  -webkit-transition: background-color .3s ease-out;
  -o-transition: background-color .3s ease-out;
  transition: background-color .3s ease-out;
}

.cvBtn:hover {
  background-color: #FFFFFF;
  color: #970a1b;
}

section {
  padding: 7em 0;
}

.cvSection {
  padding: 3em 0;
}

.sectionProject {
  padding: 0px 0px;
  margin-top: -25px;
}

.section-title {
  margin-top: 0;
}

.section-body-sm {
  margin-top: 1em;
}

.row-columns {
  margin-top: -4em;
}

.row-padding {
  margin-left: -2em;
  margin-right: -2em;
}

body {
    min-height: 2000px;
    padding-top: 70px; /*70px nabar height*/
}

p {
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.62;
  color: #767676;
}

#about {
  background-color: white;
  height: calc(100vh);
  margin-top: 50px;
}

html {
  -webkit-font-smoothing: antialiased;
}

.anchor {
  display:block;
  height:79px; /* this is the height of header */
  margin-top:-79px; /* negative value of the height of  header */
  visibility: hidden;
}

.bgc-light {
  background-color: #F7F7EB;
}

// #f7f7f7


.lead-text {
  font-size: 1.25em;
  line-height: 1.7em;
  margin-top: 0;
}

.text-center {
  text-align: center;
}

#projects {
  height: calc(100vh);
}

#services {
  background-color: yellow;
  height: calc(100vh);
}

#contacts {
  background-color: green;
  height: calc(100vh);
}

.img-responsive {
  max-width: 100%;
}

h2 {
  font-family: 'Montserrat', sans-serif;
  position: relative;
  font-size: 2.1em;
  line-height: 1.4;
  font-weight: 700;
  color: #343434;
  margin-bottom: 0.5em;
}

// projects

.filter {
  font-family: 'Montserrat', sans-serif;
  text-align: center;
  font-size: 0.75em;
  letter-spacing: 0.2em;
  margin: 4em 0 4em;
  li {
    margin: 1em 0 0;
    display: inline-block;
    text-transform: uppercase;
    a {
      padding: 1em 1.4em;
    }
  }
}

.filter .active a {
  color: #343434;
  text-decoration: none;
  border: 2px solid #343434;
}

ul {
  list-style: none;
  padding-left: 0;
}

.isotope {
  margin-top: 4%;
}

// .showcase-item {
//   position: relative;
//   color: #fff;
// }
//
// .showcase-item:hover {
//   opacity: 0.9;
//   background-color: red;
// }
//
// .showcase-item-hover:hover {
//   position: absolute;
//   overflow: hidden;
//   z-index: 1;
//   top: 0;
//   bottom: 0;
//   left: 0;
//   right: 0;
//   opacity: 0;
//   color: #fff;
//   background-color: #970a1b;
//   -webkit-transition: all 0.3s ease-in;
//   -o-transition: all 0.3s ease-in;
//   transition: all 0.3s ease-in;
// }
//
// .showcase-item-info {
//   position: absolute;
//   top: 50%;
//   left: 20px;
//   opacity: 0;
//   width: 100%;
//   padding: 0 2em;
//   text-align: center;
//   -webkit-transform: translateY(-50%));
//   -ms-transform: translateY(-50%);
//   transform: translateY(-50%);
//   -webkit-transition: all 0.3s ease-in;
//   -ms-transition: all 0.3s ease-in;
//   transition: all 0.3s ease-in;
// }
* {
  margin: 0;
  padding: 0;
  border: 0;
}

/* relevant styles */
.img__wrap {
  position: relative;
  width: 538px;
  height: 375px;
}

.img__img {
  width: 538px;
  height: 375px;
}

.img__description {
  position: absolute;
  overflow: hidden;
  z-index: 1;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  opacity: 0;
  color: #fff;
  background-color: #970a1b;
  transition: opacity .5s, visibility .2s;
}


.img__wrap:hover .img__description {
  visibility: visible;
  opacity: 0.9;
}

.projTitle {
  font-family: 'Montserrat', sans-serif;
  font-weight: 700;
  text-transform: uppercase;
  font-size: 26px;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  text-align: center;
  margin-top: 30%;
}

h4 {
  font-size: 14px;
}

.db {
  font-size: 17px;
}

.gitProj1 {
  font-size: 35px;
  margin-left: 46%;
}

.gitProj2 {
  font-size: 35px;
  margin-left: 47%;
}

.gitProj3 {
  font-size: 35px;
  margin-left: 46%;
}

.gitProj4 {
  font-size: 35px;
  margin-left: 35%;
}

.githubFont {
  font-family: 'Montserrat', sans-serif;
  font-size: 12px;
  color: black;
}

.fa {
  color: black;
}

.fa:hover {
  color: #970a1b;
  text-decoration: none;

}

